# advanced_nlp

./: .gitignore  Presentation_Slides.html  Presentation_Slides.qmd  README.md  _build_notebooks.py  add_watermark.py  data_utils.py  eval_utils.py  pyproject.toml
.cache/: llm_responses_claude-opus-4-8.csv
.githooks/: pre-commit
.github/: copilot-instructions.md
data/: augmented_32.csv  labeled_32.csv  llm_generated.csv  llm_generated_matched.csv  test.csv  train.csv  val.csv
figures/: make_datacurve.py  make_models32.py  make_part4_box.py  make_top_words.py
notebooks/: _finish_part3.py  bert_part2.ipynb  bert_part2_3.ipynb  dataprep_aug.ipynb  part1.ipynb  part2.ipynb  part2_zeroshot_code.ipynb  part3.ipynb  part3d.ipynb  part4.ipynb  zeroshot_part2.ipynb  zeroshot_part2_3.ipynb
results/: part4_seeds.csv  part4_seeds_agg.csv  part4b_comparison.csv  results.csv
